_generated-doc/3.2/config/quarkus-oidc-oidc-build-time-config.adoc

:summaryTableId: quarkus-oidc-oidc-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-build-time-config_configuration]]link:#quarkus-oidc-oidc-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.enabled]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.enabled[quarkus.oidc.enabled]`


[.description]
--
If the OIDC extension is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type[quarkus.oidc.devui.grant.type]`


[.description]
--
Grant type which will be used to acquire a token to test the OIDC 'service' applications

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEVUI_GRANT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEVUI_GRANT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:client['client_credentials' grant], tooltip:password['password' grant], tooltip:code['authorization_code' grant], tooltip:implicit['implicit' grant] 
|


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-client-timeout]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-client-timeout[quarkus.oidc.devui.web-client-timeout]`


[.description]
--
The WebClient timeout. Use this property to configure how long an HTTP client used by Dev UI handlers will wait for a response when requesting tokens from OpenId Connect Provider and sending them to the service endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEVUI_WEB_CLIENT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEVUI_WEB_CLIENT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`4S`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled[quarkus.oidc.default-token-cache-enabled]`


[.description]
--
Enable the registration of the Default TokenIntrospection and UserInfo Cache implementation bean. Note it only allows to use the default implementation, one needs to configure it in order to activate it, please see `OidcConfig++#++tokenCache`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEFAULT_TOKEN_CACHE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEFAULT_TOKEN_CACHE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant-options-grant-options]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant-options-grant-options[quarkus.oidc.devui.grant-options]`


[.description]
--
Grant options

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEVUI_GRANT_OPTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEVUI_GRANT_OPTIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
